# maas-automation

./: .gitlab-ci.yml  BOND_ACTIONS_COMPARISON.md  BOND_VLAN_QUICKREF.md  BOND_VLAN_SEPARATE_GUIDE.md  BOND_VLAN_SEPARATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MULTI_VLAN_BOND_GUIDE.md  QUICKSTART.md  README.md  RESERVED_IP_GUIDE.md  RESERVED_IP_QUICKREF.md  TESTING_RESERVED_IP.md  UPDATE_INTERFACE_GUIDE.md  UPDATE_INTERFACE_IMPLEMENTATION.md  UPDATE_INTERFACE_QUICKREF.md  common-user-data.yaml  debug_create.py  example_add_vlan_to_bond.json  example_bond_vlan_with_subnet.json  example_bond_vlan_workflow.json  example_complete_bond_vlan_separate.json  example_complete_bond_vlan_workflow.json  example_create_bond.json  example_create_reserved_ip.json  example_delete_reserved_ip.json  example_get_reserved_ip.json  example_input.json  example_list_reserved_ips.json  example_list_subnets.json  example_multi_vlan_bond.json  example_update_interface.json  example_update_reserved_ip.json  maas_automation.py  pyproject.toml  test_invalid_action.json  user-data.yaml
src/maas_automation/: __init__.py  bios.py  boot.py  cli.py  client.py  controller.py  machine.py  network.py  reservedip.py  storage.py  utils.py
src/maas_automation_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
