[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maas-automation-sdk"
version = "0.1.0"
description = "MAAS automation SDK: create/commission/configure/deploy/release/delete machines via MAAS API"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "MAAS Automation Team" }]
dependencies = [
    "requests>=2.30",
    "Jinja2>=3.1"
]

[project.scripts]
maas-automation = "maas_automation.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "mypy>=1.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
